[project]
name = "tripmate-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "airportsdata>=20260315",
    "fastapi>=0.138.2",
    "jinja2>=3.1.6",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pycountry>=26.2.16",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
